# ChangeLog for net-irc/irssi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.191 2014/08/09 20:11:44 swift Exp $

  09 Aug 2014; Sven Vermeulen <swift@gentoo.org> irssi-0.8.15-r1.ebuild,
  irssi-0.8.15-r2.ebuild, irssi-0.8.16.ebuild, irssi-0.8.16_rc1.ebuild,
  irssi-9999.ebuild:
  Adding USE=selinux dependency towards sec-policy/selinux-irc

  31 May 2014; Sven Wegener <swegener@gentoo.org> irssi-9999.ebuild:
  Allow elinks in addition to lynx for text documentation generation.

*irssi-0.8.16 (30 May 2014)

  30 May 2014; Sven Wegener <swegener@gentoo.org> +irssi-0.8.16.ebuild:
  Version bump.

  10 Mar 2014; Sven Wegener <swegener@gentoo.org> irssi-0.8.16_rc1.ebuild,
  irssi-9999.ebuild, metadata.xml:
  Add support for proxy USE flag, bug #440302 by Sean McGovern.

  06 Mar 2014; Mark Wright <gienah@gentoo.org> files/irssi-0.8.15-tinfo.patch,
  irssi-0.8.15-r2.ebuild:
  Thanks to jer for help, try to address some concerns in
  https://bugs.gentoo.org/show_bug.cgi?id=453396#c25 : Change irssi-0.8.15-r2 to
  link against -lncurses -ltinfo when sys-libs/ncurses it built with the tinfo
  USE flag to be consistent with how irssi-0.8.15-r1 links against -lncurses
  when sys-libs/ncurses it built without the tinfo USE flag. Replace the pkg-
  config --libs ncurses with logic in curses.m4 that checks if irssi needs to
  also link with -ltinfo or not.  Add the --without-terminfo configure flag as
  without this irssi defaults to linking with -ltinfo without -lncurses

  05 Mar 2014; Sven Wegener <swegener@gentoo.org> irssi-0.8.15-r2.ebuild,
  +irssi-0.8.16_rc1.ebuild, irssi-9999.ebuild:
  Switch live ebuild to git, bug #486716.

*irssi-0.8.16_rc1 (05 Mar 2014)

  05 Mar 2014; Sven Wegener <swegener@gentoo.org> irssi-0.8.15-r2.ebuild,
  +irssi-0.8.16_rc1.ebuild:
  Version bump, bug #486716.

  05 Mar 2014; Sven Wegener <swegener@gentoo.org> irssi-0.8.15-r2.ebuild: