@@ -5,27 +5,19 @@ AUX irssi-0.8.15-tinfo.patch 660 SHA256 5a52f72cefab29dea374d808541dab95a23de4fd
 DIST irssi-0.8.15.tar.bz2 948847 SHA256 c12d16fb605103d7c256ddce44012dc396af57f3771e086d0387c195a052a0a6 SHA512 cecda925ae7c422fd95e8e94a123be8732a59a3a3c5d149b2fe16e1cac78cc516acb7a89ad79cf4ac0c412c9d4d3ea83fe5c0535ab6428e98479dc8909d0615a WHIRLPOOL 67c9f3f995d7d2e58b61c88d00bf4b5b7bb30181b143deac23a701422bdb5857642d346f34c75307954064da4f21752bd1f860da69446554c2658db3f28163f3
 DIST irssi-0.8.16-rc1.tar.bz2 980941 SHA256 64d3edcb5e00f63c7926c0f59403d5ab1dcc414a8539b860e152f3fb87d31674 SHA512 a172737ce1abfb020cca9b1aa62343e89831faada842915156f3327ef4c0c240ea89ea1da058449a21f34d383bb80d743ef9568264b70a582e55a4a3723fd289 WHIRLPOOL 091018ef4d631a7b05c31ad2b633b59d997ffba665e2a0c31112c3a139ddc1fa72120433a5588d818bc8a0182bd35ebb301a2937716e7101294aad7ca809be0d
 DIST irssi-0.8.16.tar.bz2 986129 SHA256 3f7afed2a2754f1f5bf5cf2c87476f3c4d4aa5d71f9f4f68d05f927220d19f97 SHA512 47ad923cc91d5eee3f402126f4da396544cef943f6313af3fd102953939224e97c1bba31af3ac93e67fc84f089b0cfc73e8e7dd7b46b81abe1326567fef33de0 WHIRLPOOL 7ece8c3473c5fa084f07e3af1e90af128a968333af736bac1ecbebe0bf2ee0f78f6d7f1fbb1378d1d33fd933bb4bbb56f04b5b6c48f1751a1dfe8566746547d0
+DIST irssi-0.8.17-rc1.tar.bz2 1101684 SHA256 f42ff99430c807fce415c303bffc6e23e78eb6493d4877cd95ec2aa317a46ff5 SHA512 a2dbff909d8785a93bcfb9a3c29ce0868e24143dbe98916aa89586a4b4a0eff31e708187eadad13cf41268e484ff91d8b5bbc0e32217fb86508d371c43624b83 WHIRLPOOL cc08e30d0f470f651d86a0433e49d4c93475e59f2b93197ff9d994b1ff949f3fc93ba1b8a839d21dfaaf62838cea13c03f8dbf27d9e1ffc68eb065133dd81bc5
 EBUILD irssi-0.8.15-r1.ebuild 1438 SHA256 ba710ff6c348a56a88b58e1d782748caabfda3e69c297ed12024d5d9c82523e2 SHA512 17fb69804bceda31e64cf6d3d08a041a1524a2f725957d0469c26c1091ff6996b556ce049d58811848043b13f0b5b75880a3d823dca32b51f711db6c53e195f5 WHIRLPOOL 74f07b52873605b685baab91bc28baadb4ccb9ee6aafdface8dbf5d5260f9bfd393d5da98b634c801cb51f8fefca387815cbb0bdf6b21e7724f6bbceb59ff080
 EBUILD irssi-0.8.15-r2.ebuild 1541 SHA256 fbab15ab7e108d57ef8a3a4350b353524913ac8333e4afd08d1edfa1a731eda4 SHA512 874b1329e48a31de0d6d9900e4225e9f999e9dcd3b48b9fefcc7d053b6db4cab2ac02d689e17a9e49d5776ee84c3ddfbf3718e4e71036fd1d37044f4c7371066 WHIRLPOOL 7ed3d0477f4a994efc8d2c51c6d50ee46aa688a02bfb7022834bce688f98f00667f0b8180025022f365f11728407dc318213032463104a32a72b15f4e3a5b33b
 EBUILD irssi-0.8.16.ebuild 1734 SHA256 9c74c9023d4fbee6e143bae2bdafc9842081c587d59da604c98b2f6f4ec04e30 SHA512 ac254863926159871de5259c7e6d58c4e15547d8bb4de643c4b69444001a4e239e3da6117be89fddb4d1441c5eec6940ac26583a3691b3381abf00d1812cd670 WHIRLPOOL bdaf536ffde8591bb025a8f7c20e8cbb6c99dbbb34e0d48b558a83a00af9c1aed22c8ef8d9c69e3c07bbb27cc62ffa98408b03eb0a099e2ed5abf3207837e832
 EBUILD irssi-0.8.16_rc1.ebuild 1738 SHA256 01cfcc56a6c7cdf03349bfb5b575897f654a2c6098534452027fde3667d7f750 SHA512 00cecf1f2cd7933b6c954fdc14de4d8f8b8d395396de3c39c8f75a20f4feb8b9a0b5e2d8b1b7a800592618828d9bb69ee03789a4281c222ed025cadb4e4bc78c WHIRLPOOL 8d54dcaa3bbebd4ea118fea805a0fb163bb7ab0240bb1dba2b816e6eba256dc7817f394f5ea9d540893c0a43c042716ae00652849e460c8ec6585b088755e1f9
-EBUILD irssi-9999.ebuild 1415 SHA256 54eacec601b6fe63a5d85948368efa038ec608ff4964e4f8c35f33f68ad8ce3f SHA512 b5b88d2987d2bd8ce6d4c367d8f366a1ec94be02620236bfef863999cb8e476bdce07f42248e9e17f6861bb6d2cfbd0b81ec3222fea1731bac191a413f4119da WHIRLPOOL 51b183f0022784b42320e801be8a324f246684567ab1c06e8ba3a0e53819a8bea30bb5549f3097a0ce2a9cc2d1891f7dd04274e226cc4b487d70ab9a91a2633a
-MISC ChangeLog 27276 SHA256 4f16ffe1bafe084d3c61fc346d83d5ee3cdae42a7fca0729d242226376b2e224 SHA512 b21d74cf650af159312a4334ecdbad2bdf87917d91460dc0d08947b56e141baca20710233700a17332aacef4e5640346a108ba17270075e8f025caf1d3ab40fe WHIRLPOOL 725e35bac3209088b87868e695f2c131e5907a8fe50708b784ab6863cf4fe64a1d85a6cb0eb3880b99d40580bec5f9f5fdbb3a069fe5bc685a7ee750ba6e9b53
+EBUILD irssi-0.8.17_rc1.ebuild 1632 SHA256 409554184cf087e46ef0d1308b961f4e097611e3d2cc68f56eae3d514b53c872 SHA512 60f5341e9a63594aa358869591df84ebde9e3958582f031e29f88cbdc18602503bd5a50d8284f2696c702df27be27db2134148c26538fc0a9eec24691cc568c5 WHIRLPOOL 083b1665c04f925a2d025e82039115a571c52eae8ced4fdfbb571aaa7865d6be533b6ac7ddc9d8f83cc580ed62f7dbd862389faf6d88d08c935013ff1bf848af
+EBUILD irssi-9999.ebuild 1386 SHA256 da5bf8e730286bc5dfc2f0e58774a3fd2dcfcf1865604ab7870a67a301df770f SHA512 6c525a0b9b85d958c5a215107cf57fb00341fbf8c7f13ec9d9907f3e1625761827e859dd6aa6505b895bb7a6e4a7f50ab21bdbca06354be9b4a429c8dd89a70f WHIRLPOOL 28102d91a703032811eb57959dd62785e694cce6bbb729dfaf1e7a01f5a658630ca7bab7074805e5e069c75b41356493d193b68398cbbe16403c8f32179dcc2b
+MISC ChangeLog 27507 SHA256 2e62a1f9cdc3d012600d447a1dcf3754f19b7f4cfb5b7c6d8fd1e02d485b029d SHA512 39cc5978d25c31c0ef03ccd9244f153f0b12328a4ac8b83100a84bce6bbb915574c3a58e35d2d146fe0161ec3f22d5fe8a4224b57fc9bb0b9348e9a424dd6d2d WHIRLPOOL ec0465efa1dd4e35496b0852401fd8e9045d74f444fec2385d4208bd62fb21ff5c87b81b4f26b1ca86a68b50cb724fc6a8087fe3e14b68280d74508c74bdd486
 MISC metadata.xml 355 SHA256 b0d3b057227df99f10fb9f2ff86154a0c7c4fa23dbdca1a73804956cb41653de SHA512 84e2fc9a8eb50f2dc4bcbf2f11dcb07dd86dbf8ddb952dd93d0f6607052b15e9d6902529380d4b754700b4a02dc60fbea2e027707035e25f37c46301e942dc08 WHIRLPOOL 438de3ce0d19f0c86e8471d296a8afc59643d4dceac270cec01ae2ee6c15db2124912908eb121a9ff6ef03154dbb5700f4d11837edcee0ed090e7641eba31462
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT5oCFAAoJEC7dUkA7aK9Hk3AQAIvmwwiXeBzziAljUYYdv+QE
-mMrZX9tFgPI91buLwJzADR90dBrtS1Hgk+qroWcJdC/GNjubh1jSvG/lSmz95wCW
-9oZgzCz1LENBPp2GCD4SJwUbeadn6lanl5jvDdeND16V7sJRQNl52IaYlljIG4Q9
-R97esn0F5qXwscSULVZsEB5jnOKut+JcH52ze/uVG08UlxwBFHgGPJ8zapBy1YQM
-+45SUH+I7K1VuY7GPwP523tejGlSPPhX30dL47FNBwCVRqIh2X+wRwsww/Npk5W+
-vWlVuExba0JsH/gqpvKnof0HNQWzBLsHEYqNev93u9ojWs+90JaxMw6FDbVWfOp3
-Jaku7L72AUycO2Vhv9ibLovl/XMpyeu09pEZxi901Z8hl8FszZ6dQSKx1FoCoEAo
-7qeVSa55K5VJ65Fz2Lvse8uxe9zf9MakgifWEDe4PKf9HlEy5YJ2eWViEOxtwQFy
-QcUbG4HMcaw6LDp12F7TqreIwdO5O+OcOkqTC8E1sVwj7/mUYBBliAEJ/QA2MzqF
-9Zas3okD5EUzKXqm9hdhnDpfP+JmaK2PtLjyuZfQaVFIMQIilfrAJw+8QbCpXgTx
-03BbeF3r/59JC+KqFhjDNaLv07TYJl1iS7I3gdmyrYwmLkKobyXlXNzjhWabsN2z
-sthQS+2RtmVzJC68WEEy
-=TwEd
+iEYEAREIAAYFAlQDNxEACgkQI1lqEGTUzyS8uwCghJUwMB2ScBoEp95tj7+iHOUX
+n4MAoLKf1FnhiL0eS2OcNwHFy8oAxrQr
+=2+dA
 -----END PGP SIGNATURE-----
