@@ -1,10 +1,12 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.1085 2014/08/31 14:07:44 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.1086 2014/08/31 14:37:13 ssuominen Exp $
 
   31 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> udev-9999.ebuild:
   Make sure CONFIG_FW_LOADER_USER_HELPER is set to =n and remove references to
-  the userspace firmware loader.
+  the userspace firmware loader as per http://cgit.freedesktop.org/systemd/
+  systemd/commit/?id=be2ea723b1d023b3d385d3b791ee4607cbfb20ca
+  At least Linux 3.7 is required for kernel side firmware loader to exist
 
   24 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> udev-216.ebuild:
   Apply upstream commits http://cgit.freedesktop.org/systemd/systemd/commit/src/
