@@ -1,6 +1,14 @@
 # ChangeLog for net-irc/irssi
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.191 2014/08/09 20:11:44 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.193 2014/08/31 14:54:08 swegener Exp $
+
+  31 Aug 2014; Sven Wegener <swegener@gentoo.org> irssi-9999.ebuild:
+  Switch live ebuild to github.
+
+*irssi-0.8.17_rc1 (31 Aug 2014)
+
+  31 Aug 2014; Sven Wegener <swegener@gentoo.org> +irssi-0.8.17_rc1.ebuild:
+  Version bump.
 
   09 Aug 2014; Sven Vermeulen <swift@gentoo.org> irssi-0.8.15-r1.ebuild,
   irssi-0.8.15-r2.ebuild, irssi-0.8.16.ebuild, irssi-0.8.16_rc1.ebuild,
